// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NightMotion component matches snapshot in active state 1`] = `
<DocumentFragment>
  <div
    style="display: flex; flex-direction: row; align-items: stretch; gap: 1.5rem; width: 100%;"
  >
    <div
      style="flex: 1 1 22rem;"
    >
      <form
        aria-busy="false"
        style="border: 1px solid #333; background-color: rgb(42, 43, 47); padding: 1.25rem; border-radius: 0.5rem; margin: 0px; box-shadow: 0 0 0.65rem rgba(0,0,0,0.45); display: flex; flex-direction: column; gap: 0.75rem;"
      >
        <header>
          <h2
            style="margin: 0px;"
          >
            NightMotion
          </h2>
        </header>
        <div
          style="display: flex; flex-direction: column; gap: 0.75rem;"
        >
          <div
            style="display: flex; flex-direction: column; gap: 0.9rem;"
          >
            <label
              style="display: flex; flex-direction: column; gap: 0.35rem;"
            >
              <span>
                Uživatelské jméno
              </span>
              <input
                autocomplete="username"
                data-testid="nightmotion-username"
                name="username"
                placeholder="username"
                style="padding: 0.45rem 0.75rem; margin-right: 0.5rem; border-radius: 0.25rem; border: 1px solid #555; background-color: rgb(42, 43, 47); color: rgb(230, 230, 230); width: 100%; max-width: 22rem;"
                type="text"
              />
            </label>
            <label
              style="display: flex; flex-direction: column; gap: 0.35rem;"
            >
              <span>
                Heslo
              </span>
              <div
                style="display: flex; gap: 0.5rem; align-items: center;"
              >
                <input
                  autocomplete="current-password"
                  data-testid="nightmotion-password"
                  name="password"
                  placeholder="password"
                  style="padding: 0.45rem 0.75rem; margin-right: 0.5rem; border-radius: 0.25rem; border: 1px solid #555; background-color: rgb(42, 43, 47); color: rgb(230, 230, 230); width: 100%; max-width: 22rem;"
                  type="password"
                />
                <button
                  aria-label="Show password"
                  style="padding: 0.4rem 0.6rem; background-color: rgb(68, 68, 68); color: rgb(255, 255, 255); border-radius: 0.25rem; cursor: pointer; transition: background 0.3s ease; font-size: 0.8rem; line-height: 1.4;"
                  type="button"
                >
                  Show
                </button>
              </div>
            </label>
            <label
              style="display: flex; flex-direction: column; gap: 0.35rem;"
            >
              <span>
                Stream URL
              </span>
              <input
                autocomplete="off"
                data-testid="nightmotion-stream"
                name="streamUrl"
                placeholder="rtsp://"
                style="padding: 0.45rem 0.75rem; margin-right: 0.5rem; border-radius: 0.25rem; border: 1px solid #555; background-color: rgb(42, 43, 47); color: rgb(230, 230, 230); width: 100%; max-width: 22rem;"
                type="url"
              />
            </label>
          </div>
        </div>
        <div
          style="display: flex; flex-direction: row; justify-content: flex-end; align-items: center; gap: 0.75rem; margin-top: 1rem;"
        >
          <button
            data-testid="nightmotion-stop"
            style="padding: 0.5rem 0.9rem; background-color: rgb(58, 59, 63); color: rgb(255, 255, 255); border-radius: 0.25rem; cursor: pointer; transition: background 0.3s ease; font-size: 0.95rem; line-height: 1.4; min-width: 9rem; opacity: 1;"
            type="button"
          >
            Stop
          </button>
          <button
            data-testid="nightmotion-start"
            style="padding: 0.5rem 0.9rem; background-color: rgb(58, 123, 213); color: rgb(255, 255, 255); border-radius: 0.25rem; cursor: pointer; transition: background 0.3s ease; font-size: 0.95rem; line-height: 1.4; min-width: 9rem; opacity: 1;"
            type="submit"
          >
            Active
          </button>
        </div>
      </form>
    </div>
    <div
      style="border: 1px solid #333; background-color: rgb(42, 43, 47); padding: 1.25rem; border-radius: 0.5rem; margin: 0.75rem 0px; box-shadow: 0 0 0.65rem rgba(0,0,0,0.45); display: flex; flex-direction: column; gap: 1rem; min-height: 20rem; flex: 1 1 24rem;"
    >
      <div
        style="display: flex; flex-direction: column; gap: 0.5rem;"
      >
        <div
          aria-live="polite"
          data-testid="nightmotion-status"
          style="display: inline-flex; align-items: center; gap: 0.6rem; font-weight: 600; color: rgb(46, 204, 113); transition: opacity 0.3s ease, transform 0.3s ease; opacity: 0; transform: translateY(-6px);"
        >
          <span
            style="width: 0.75rem; height: 0.75rem; border-radius: 999px; background-color: rgb(46, 204, 113); box-shadow: 0 0 0.4rem #2ecc7155;"
          />
          <span>
            Active
          </span>
        </div>
      </div>
      <img
        alt="Night motion stream"
        data-testid="nightmotion-stream-img"
        src="http://127.0.0.1:5000/api/stream-proxy?url=rtsp%3A%2F%2Fcamera%2Flive&username=operator&password=secret"
        style="width: 100%; max-height: 60vh; background-color: rgb(0, 0, 0); border-radius: 0.5rem; border: 1px solid #333; object-fit: contain; transition: opacity 0.35s ease, transform 0.35s ease; opacity: 1;"
      />
      <div
        style="font-size: 0.85rem; color: rgb(176, 176, 184); line-height: 1.5;"
      >
        <p
          style="margin: 0px;"
        >
          Stream se spustí s krátkým zpožděním, aby bylo možné navázat šifrované spojení. Pokud se přehrávání nespustí, zkontrolujte přístupové údaje nebo adresu streamu.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NightMotion component matches snapshot in idle state 1`] = `
<DocumentFragment>
  <div
    style="display: flex; flex-direction: row; align-items: stretch; gap: 1.5rem; width: 100%;"
  >
    <div
      style="flex: 1 1 22rem;"
    >
      <form
        aria-busy="false"
        style="border: 1px solid #333; background-color: rgb(42, 43, 47); padding: 1.25rem; border-radius: 0.5rem; margin: 0px; box-shadow: 0 0 0.65rem rgba(0,0,0,0.45); display: flex; flex-direction: column; gap: 0.75rem;"
      >
        <header>
          <h2
            style="margin: 0px;"
          >
            NightMotion
          </h2>
        </header>
        <div
          style="display: flex; flex-direction: column; gap: 0.75rem;"
        >
          <div
            style="display: flex; flex-direction: column; gap: 0.9rem;"
          >
            <label
              style="display: flex; flex-direction: column; gap: 0.35rem;"
            >
              <span>
                Uživatelské jméno
              </span>
              <input
                autocomplete="username"
                data-testid="nightmotion-username"
                name="username"
                placeholder="username"
                style="padding: 0.45rem 0.75rem; margin-right: 0.5rem; border-radius: 0.25rem; border: 1px solid #555; background-color: rgb(42, 43, 47); color: rgb(230, 230, 230); width: 100%; max-width: 22rem;"
                type="text"
              />
            </label>
            <label
              style="display: flex; flex-direction: column; gap: 0.35rem;"
            >
              <span>
                Heslo
              </span>
              <div
                style="display: flex; gap: 0.5rem; align-items: center;"
              >
                <input
                  autocomplete="current-password"
                  data-testid="nightmotion-password"
                  name="password"
                  placeholder="password"
                  style="padding: 0.45rem 0.75rem; margin-right: 0.5rem; border-radius: 0.25rem; border: 1px solid #555; background-color: rgb(42, 43, 47); color: rgb(230, 230, 230); width: 100%; max-width: 22rem;"
                  type="password"
                />
                <button
                  aria-label="Show password"
                  style="padding: 0.4rem 0.6rem; background-color: rgb(68, 68, 68); color: rgb(255, 255, 255); border-radius: 0.25rem; cursor: pointer; transition: background 0.3s ease; font-size: 0.8rem; line-height: 1.4;"
                  type="button"
                >
                  Show
                </button>
              </div>
            </label>
            <label
              style="display: flex; flex-direction: column; gap: 0.35rem;"
            >
              <span>
                Stream URL
              </span>
              <input
                autocomplete="off"
                data-testid="nightmotion-stream"
                name="streamUrl"
                placeholder="rtsp://"
                style="padding: 0.45rem 0.75rem; margin-right: 0.5rem; border-radius: 0.25rem; border: 1px solid #555; background-color: rgb(42, 43, 47); color: rgb(230, 230, 230); width: 100%; max-width: 22rem;"
                type="url"
              />
            </label>
          </div>
        </div>
        <div
          style="display: flex; flex-direction: row; justify-content: flex-end; align-items: center; gap: 0.75rem; margin-top: 1rem;"
        >
          <button
            data-testid="nightmotion-stop"
            disabled=""
            style="padding: 0.5rem 0.9rem; background-color: rgb(58, 59, 63); color: rgb(255, 255, 255); border-radius: 0.25rem; cursor: not-allowed; transition: background 0.3s ease; font-size: 0.95rem; line-height: 1.4; min-width: 9rem; opacity: 0.7;"
            type="button"
          >
            Stop
          </button>
          <button
            data-testid="nightmotion-start"
            style="padding: 0.5rem 0.9rem; background-color: rgb(58, 123, 213); color: rgb(255, 255, 255); border-radius: 0.25rem; cursor: pointer; transition: background 0.3s ease; font-size: 0.95rem; line-height: 1.4; min-width: 9rem; opacity: 1;"
            type="submit"
          >
            Start
          </button>
        </div>
      </form>
    </div>
    <div
      style="border: 1px solid #333; background-color: rgb(42, 43, 47); padding: 1.25rem; border-radius: 0.5rem; margin: 0.75rem 0px; box-shadow: 0 0 0.65rem rgba(0,0,0,0.45); display: flex; flex-direction: column; gap: 1rem; min-height: 20rem; flex: 1 1 24rem;"
    >
      <div
        style="display: flex; flex-direction: column; gap: 0.5rem;"
      >
        <div
          aria-live="polite"
          data-testid="nightmotion-status"
          style="display: inline-flex; align-items: center; gap: 0.6rem; font-weight: 600; color: rgb(136, 136, 136); transition: opacity 0.3s ease, transform 0.3s ease; opacity: 1; transform: translateY(0px);"
        >
          <span
            style="width: 0.75rem; height: 0.75rem; border-radius: 999px; background-color: rgb(136, 136, 136); box-shadow: 0 0 0.4rem #88888855;"
          />
          <span>
            Idle
          </span>
        </div>
      </div>
      <div
        data-testid="nightmotion-stream-placeholder"
        style="width: 100%; max-height: 60vh; background-color: rgb(0, 0, 0); border-radius: 0.5rem; border: 1px solid #333; object-fit: contain; transition: opacity 0.35s ease, transform 0.35s ease; opacity: 0.85; display: flex; align-items: center; justify-content: center; color: rgb(119, 119, 119); font-size: 0.9rem;"
      >
        Stream preview
      </div>
      <div
        style="font-size: 0.85rem; color: rgb(176, 176, 184); line-height: 1.5;"
      >
        <p
          style="margin: 0px;"
        >
          Stream se spustí s krátkým zpožděním, aby bylo možné navázat šifrované spojení. Pokud se přehrávání nespustí, zkontrolujte přístupové údaje nebo adresu streamu.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
